tests/baselines/reference/typeFromPropertyAssignment26.errors.txt
tests/cases/conformance/salsa/bug24730.js(7,1): error TS7022: 'context' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
tests/cases/conformance/salsa/bug24730.js(11,14): error TS2339: Property 'doesNotExist' does not exist on type 'C'.
tests/cases/conformance/salsa/bug24730.js(12,26): error TS2339: Property 'doesntExistEither' does not exist on type 'number'.


==== tests/cases/conformance/salsa/bug24730.js (3 errors) ====
    var UI = {}
    UI.TreeElement = class {
        constructor() {
            this.treeOutline = 12
        }
    };
    UI.context = new UI.TreeElement()
    ~~~~~~~~~~
!!! error TS7022: 'context' implicitly has type 'any' because it does not have a type annotation and is referenced directly or indirectly in its own initializer.
    
    class C extends UI.TreeElement {
        onpopulate() {
            this.doesNotExist
                 ~~~~~~~~~~~~
!!! error TS2339: Property 'doesNotExist' does not exist on type 'C'.
            this.treeOutline.doesntExistEither()
                             ~~~~~~~~~~~~~~~~~
!!! error TS2339: Property 'doesntExistEither' does not exist on type 'number'.
        }
    };
    